--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://github.com/approvers/devoirs-core#readme",
   "license": "MIT",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "keywords": [
     "microsoft-365",
     "microsoft-teams",
@@ -26,5 +27,8 @@
   "devDependencies": {
     "@types/node": "^14.14.7",
     "typescript": "^4.0.5"
-  }
+  },
+  "files": [
+    "./dist"
+  ]
 }
