--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Set version by the release tag
+        run: npm version ${{ github.event.release.tag_name }}
+
       - name: Publish the package
         run: npm publish
         env:
