--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "npm run build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "puppeteer": "^5.5.0"
+  },
   "devDependencies": {
     "@types/node": "^14.14.7",
     "typescript": "^4.0.5"
