--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
+    "@types/puppeteer": "^5.4.0",
     "typescript": "^4.0.5"
   },
   "files": [
